tokio-fsm-macros/tests/ui/serde_feature_required.stderr
error: `#[fsm(serde = true)]` requires enabling the `serde` feature on the `tokio-fsm` dependency
 --> tests/ui/serde_feature_required.rs:3:1
  |
3 | #[fsm(initial = Idle, serde = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `::tokio_fsm::__tokio_fsm_serde_derive` which comes from the expansion of the attribute macro `fsm` (in Nightly builds, run with -Z macro-backtrace for more info)
